# discord-self-bot-preferences

./: .gitignore  README.md  friends.json  pyproject.toml
self_bot/: main.py
