[tool.poetry]
name = "self-bot"
version = "0.1.0"
description = "Facilitate the removal of friends on discord"
authors = ["xl-spooky <spkydevelopment@gmailS.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py-self = "^2.0.0"
pynacl = "^1.5.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
